--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         </style>
     </head>
     <body lang=ZH-CN style='text-justify-trim:punctuation'>
-        <h1>It's not over yet</h1>
+        <h1>噔噔噔噔噔</h1>
+        <p>假装这个是二维码</p>
     </body>
 </html>
